<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GestNote</string>
    <string name="tab_section_promotion">Promotions</string>
    <string name="tab_section_students">Students</string>
    <string name="tab_section_mark">Take a mark</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="sortByLastName">Sort students by lastname</string>
    <string name="sortByFirstName">Sort students by firstname</string>
    
    
    <string name="login_label_1">GestNote Beta</string>
    <string name="login_label_2">Connexion</string>
    <string name="login_label_3">www.gestnotebeta.com</string>
    <string name="login_username">Enter your username</string>
    <string name="login_password">Enter your password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_sign_up">Sign up</string>
    
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
    
</resources>